--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "appwrite": "14.0.1",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
