--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^1.9.7",
     "appwrite": "14.0.1",
     "axios": "^1.6.0",
@@ -23,11 +24,15 @@
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "currency-symbol-map": "^5.1.0",
+    "dotenv": "^16.4.7",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "next-redux-wrapper": "^8.1.0",
+    "npm": "^11.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-flags-select": "^2.2.3",
@@ -46,6 +51,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
