--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^1.9.7",
-    "appwrite": "14.0.1",
+    "appwrite": "^17.0.0",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "currency-symbol-map": "^5.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
